# Wbot

./: .cursorignore  .cursorrules  .env.example  .gitignore  .prettierignore  ACTIVITY_INTEGRATION_PLAN.md  ACTIVITY_REFACTOR_PLAN.md  BREATHING_FEATURE_COMPARISON.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  GUIDED_MEDITATIONS_PLAN.md  HETZNER_K3S_DEPLOYMENT.md  KUBERNETES_DEPLOYMENT.md  LICENSE  PLAN.md  PURE_OSS_DEPLOYMENT_PLAN.md  README.md  ROADMAP.md  USER_PROFILING_RESEARCH.md  eslint.config.js  lint-staged.config.js  package.json  package.json.backup  pnpm-lock.yaml  prettier.config.js  turbo.json
.claude/hooks/: post-edit-docs.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ai-docs.yml
.husky/: pre-commit  pre-push
apps/: TEST.MD
apps/ai/: .env.example  CIRCULAR_IMPORT_NOTES.md  Dockerfile  LOGGING.md  docker-compose.self-hosted.yml  langgraph.json  pyproject.toml
apps/ai/scripts/: test_redis.py  test_shared_redis.py
apps/ai/src/: __init__.py  auth.py  checkpointer.py  env.py  logging_config.py
apps/ai/src/api/: __init__.py  auth.py  graph.py  meditation.py  server.py
apps/ai/src/eval/: __init__.py  cli.py  config.py
apps/ai/src/eval/datasets/: __init__.py  activity_detection.py  conversation.py  seed.py
apps/ai/src/eval/evaluators/: __init__.py  code_based.py  llm_judge.py  metrics.py
apps/ai/src/eval/runners/: __init__.py  activity_eval.py  conversation_eval.py
apps/ai/src/graph/: __init__.py  state.py  therapy.py  wellness.py
apps/ai/src/llm/: __init__.py  providers.py
apps/ai/src/memory/: __init__.py  cache.py  embeddings.py  store.py
apps/ai/src/nodes/: __init__.py
apps/ai/src/nodes/analyze_profile/: __init__.py  models.py  node.py  storage.py
apps/ai/src/nodes/breathing_exercise/: __init__.py  node.py  safety.py
apps/ai/src/nodes/detect_activity/: __init__.py  node.py
apps/ai/src/nodes/generate_meditation_script/: __init__.py  node.py  prompts.py
apps/ai/src/nodes/generate_response/: __init__.py  node.py
apps/ai/src/nodes/inject_user_context/: __init__.py  node.py
apps/ai/src/nodes/journaling_prompt/: __init__.py  node.py  prompts.py  types.py
apps/ai/src/nodes/meditation_guidance/: __init__.py  node.py  recommendation.py
apps/ai/src/nodes/retrieve_memories/: __init__.py  node.py
apps/ai/src/nodes/store_memory/: __init__.py  node.py
apps/ai/src/prompts/: __init__.py  therapy_system.py  wellness_system.py
apps/ai/src/tts/: __init__.py  elevenlabs.py  openai_audio.py  parallel_streaming.py  voices.py
apps/ai/src/utils/: __init__.py  auth_helpers.py  user_context.py
apps/ai/tests/: __init__.py  conftest.py
apps/ai/tests/eval/: test_evaluators.py
apps/ai/tests/integration/: __init__.py  test_breathing_node.py  test_memory_nodes.py  test_message_cache_e2e.py
apps/ai/tests/unit/: __init__.py  test_api_auth.py  test_api_graph.py  test_auth.py  test_checkpointer.py  test_elevenlabs.py  test_generate_meditation_script.py  test_graph_compilation.py  test_memory_cache.py  test_memory_embeddings.py  test_memory_store.py  test_openai_audio.py  test_parallel_streaming.py  test_recommendation.py  test_recommendation_isolated.py  test_recommendation_pure.py  test_user_context.py  test_voices.py
apps/web/: .env.example  Dockerfile  app.config.timestamp_1767152120232.js  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/public/audio/: ATTRIBUTION.md
apps/web/scripts/: generate-css-classnames.ts
apps/web/src/: routeTree.gen.ts  router.tsx
apps/web/src/components/: index.ts
apps/web/src/features/: index.ts
apps/web/src/lib/: ai-client.ts  conversationHistory.ts  conversations.server.ts  conversations.ts  loadActivityCSS.ts  meditation-tts.ts  parseActivity.test.ts  parseActivity.ts  redis.ts  supabase.ts
apps/web/src/routes/: __root.module.css  __root.tsx  _authed.tsx  chat.module.css  chat.tsx  index.module.css  index.tsx  signup.module.css  signup.tsx
database/migrations/: 002_conversations.sql  003_messages.sql  005_breathing_sessions.sql  006_meditation_sessions.sql  007_meditation_scripts.sql  008_meditation_series.sql  009_user_generated_meditations.sql
database/supabase/: config.toml
database/supabase/migrations/: 20231230000001_profiles.sql
docs/: DESIGN_ANALYSIS_REPORT.md  FOUC_ISSUE_ANALYSIS.md  LIGHTHOUSE_CHAT_2026-01-15.md  LIGHTHOUSE_PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  REDIS_CACHE.md  ROADMAP.md  TANSTACK_BEST_PRACTICES_AUDIT.md  TANSTACK_REMAINING_ITEMS.md  TESTING.md  WEB_DEPLOYMENT_OPTIONS.md  WEB_HOSTING_COMPARISON.md  design-styleguide.md  direct-navigation-todos.md  docusaurus.config.ts  intro.md  meditation-audio-setup.md  package.json  sidebars.ts  storybook-review.md  tsconfig.json
docs/ai/: REDIS_SETUP.md  langgraph.md  logging.md  meditation.md  memory.md
docs/architecture/: data-flow.md  overview.md
docs/database/: migrations.md  schema.md
docs/src/css/: custom.css
docs/tooling/: docusaurus.md  storybook.md
docs/web/: activities.md  ai-client.md  authentication.md  meditation.md  supabase.md
k8s/: .gitignore  00-namespace.yaml  02-configmap.yaml  03-redis.yaml  04-ai-backend.yaml  05-web-frontend.yaml  06-ingress.yaml  MANIFEST_OVERVIEW.md  QUICKSTART.md  README.md  deploy.sh  helmfile.yaml  kustomization.yaml  values.yaml
k8s/overlays/local/: kustomization.yaml
reviews/: CODE_REVIEW_AI.md  CODE_REVIEW_INFRASTRUCTURE.md  CODE_REVIEW_TANSTACK.md  CODE_REVIEW_WEB.md
scripts/: install-deps.sh  upload-meditation-audio.ts
scripts/ai_docs/: generator.py  mappings.py  prompts.py  staleness.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20231230000003_messages.sql  20250102000004_memories.sql  20250102000005_fix_security_warnings.sql  20250103000001_conversation_history.sql  20250103200001_meditation_audio_bucket.sql  20250103300001_user_generated_meditations.sql  20250105000001_user_profiling.sql  20250108000001_meditation_scripts.sql  20250111000001_journal_entries.sql
(+372 files in other folders)
