# ============================================================================
# Wbot AI Backend - Python Project Configuration
# ============================================================================
# This file configures the Python project for the LangGraph AI backend.
#
# Package manager: uv (fast, modern Python package manager)
# Linting/Formatting: Ruff (replaces black, flake8, isort)
# Framework: LangGraph (for stateful AI agents)
# LLMs: Anthropic Claude (primary), Google Gemini (experimental)
# ============================================================================

[project]
name = "wbot-ai"
version = "0.1.0"
description = "AI backend for Wbot wellness chatbot"
readme = "README.md"
requires-python = ">=3.11,<3.14"

# Main dependencies
dependencies = [
    # -------------------------------------------------------------------------
    # LangChain Core
    # -------------------------------------------------------------------------
    # The foundation for building LLM applications
    "langchain>=1.2.0",
    # -------------------------------------------------------------------------
    # LLM Providers
    # -------------------------------------------------------------------------
    # Anthropic Claude - Primary LLM for wellness conversations
    # Known for strong reasoning and nuanced responses
    "langchain-anthropic>=1.3.0",
    # Google Gemini - Secondary/experimental LLM
    # Useful for testing and comparing model outputs
    "langchain-google-genai>=4.1.2",
    # Google GenAI SDK - For Gemini embeddings (memory system)
    # Used by src/memory/embeddings.py
    "google-genai>=1.56.0",
    # -------------------------------------------------------------------------
    # LangGraph - Stateful Agent Framework
    # -------------------------------------------------------------------------
    # Powers the conversation graph with state management
    # Enables complex multi-turn conversations with memory
    "langgraph>=1.0.6",
    # -------------------------------------------------------------------------
    # Supabase
    # -------------------------------------------------------------------------
    # Database access and auth token validation
    "supabase>=2.27.0",
    # -------------------------------------------------------------------------
    # Utilities
    # -------------------------------------------------------------------------
    # Async HTTP client for API calls
    "httpx>=0.28.1",
    # Environment variable management
    "python-dotenv>=1.2.1",
    # Data validation and serialization
    "pydantic>=2.12.5",
    # Redis client - constrained by LangGraph base image to <7.0 (server can be 7+)
    "redis>=6.4.0,<7.0",
    "anthropic>=0.75.0",
    # -------------------------------------------------------------------------
    # FastAPI - HTTP API Server
    # -------------------------------------------------------------------------
    # Used for non-conversational endpoints (TTS generation, etc.)
    "fastapi>=0.128.0",
    # ASGI server for running FastAPI
    "uvicorn>=0.40.0",
    "openai>=2.14.0",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.1; python_version >= '3.13'",  # pydub compatibility for Python 3.13+
    "imageio-ffmpeg>=0.6.0",
    # -------------------------------------------------------------------------
    # LangGraph Checkpointing
    # -------------------------------------------------------------------------
    # PostgreSQL checkpointer for persistent conversation state (self-hosted)
    # Uses psycopg3 with connection pooling for efficient database access
    "langgraph-checkpoint-postgres>=3.0.3",
    # psycopg with binary and pool support for optimal performance
    "psycopg[binary,pool]>=3.3.0",
    "langchain-openai>=1.1.7",
    "langchainhub>=0.1.21",
    "httpx-sse>=0.4.3",
    # -------------------------------------------------------------------------
    # LangSmith - Evaluation and Tracing
    # -------------------------------------------------------------------------
    # LLM observability and evaluation framework
    # Used by src/eval/ for model comparison evaluations
    "langsmith>=0.6.0",
    "cerebras-cloud-sdk>=1.64.1",
]

# Development dependencies (installed with `uv sync --dev`)
[project.optional-dependencies]
dev = [
    "ruff>=0.14.10",           # Linting and formatting (replaces black, flake8, isort)
    "mypy>=1.19.1",            # Static type checking
    "pytest>=9.0.2",           # Testing framework
    "pytest-asyncio>=1.3.0",   # Async test support
    "langgraph-cli[inmem]>=0.2.0",  # LangGraph Studio for visual debugging
]

# ============================================================================
# Ruff Configuration
# ============================================================================
# Ruff is an extremely fast Python linter and formatter written in Rust.
# It replaces: black, flake8, isort, pyupgrade, and many more tools.
#
# Run linting:    uv run ruff check .
# Run formatting: uv run ruff format .
# Fix auto-fixable issues: uv run ruff check --fix .
# ============================================================================

[tool.ruff]
# Target Python version for syntax checking
target-version = "py311"

# Maximum line length (matches black default)
line-length = 100

# Directories to exclude from linting
exclude = [
    ".venv",
    "__pycache__",
    ".git",
]

[tool.ruff.lint]
# Enable these rule sets:
# - E, W: pycodestyle (PEP 8 style guide)
# - F: pyflakes (logical errors like unused imports)
# - I: isort (import sorting and organization)
# - UP: pyupgrade (modern Python syntax)
# - B: flake8-bugbear (common bugs and design problems)
# - SIM: flake8-simplify (code simplification suggestions)
# - RUF: Ruff-specific rules
# - ANN: flake8-annotations (enforce type annotations)
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "ANN"]

# Ignore these specific rules:
# - E501: Line too long (handled by line-length setting instead)
ignore = ["E501"]

# Per-file ignores (tests don't need strict type annotations)
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "ANN001", "ANN202", "ANN401"]  # Allow missing/Any type annotations in tests

[tool.ruff.lint.isort]
# Mark our own modules as first-party for proper import grouping
known-first-party = ["src"]

[tool.ruff.format]
# Use double quotes for strings (consistent with black)
quote-style = "double"

# Use spaces for indentation (not tabs)
indent-style = "space"

# ============================================================================
# MyPy Configuration
# ============================================================================
# Static type checking for Python.
#
# Run type checking: uv run mypy src/
# ============================================================================

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

# Disallow Any types
disallow_any_explicit = true        # Disallow explicit Any in type annotations
disallow_any_generics = true        # Disallow Any in generic types (already in strict)
disallow_subclassing_any = true     # Disallow subclassing Any (already in strict)

# Ignore missing type stubs for third-party libraries
# These libraries work fine but don't have complete type annotations
[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "langgraph.*",
    "supabase.*",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

# ============================================================================
# Pyright Configuration (used by Pylance in VS Code)
# ============================================================================
# Static type checking that powers VS Code's Python IntelliSense.
# This config is read by Pylance/Pyright automatically.
#
# Type checking modes:
# - "off": No type checking
# - "basic": Catches common errors (recommended for most projects)
# - "standard": More thorough checking
# - "strict": Full type safety enforcement
# ============================================================================

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

# Include paths for type checking
include = ["src"]

# Exclude paths from type checking
exclude = [
    ".venv",
    "__pycache__",
    "tests",
]

# Report settings for common issues
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true

# ============================================================================
# Pytest Configuration
# ============================================================================
# Testing framework configuration.
#
# Run tests: uv run pytest
# ============================================================================

[tool.pytest.ini_options]
# Automatically handle async test functions
asyncio_mode = "auto"

# Directory containing test files
testpaths = ["tests"]

# Suppress third-party deprecation warnings from pyiceberg (unfixable until 0.11.0)
# See: https://github.com/apache/iceberg-python/issues/2648
filterwarnings = [
    "ignore::DeprecationWarning:pyiceberg.*",
    "ignore::pydantic.warnings.PydanticDeprecatedSince212:pyiceberg.*",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "langgraph-cli[inmem]>=0.2.0",  # LangGraph Studio for visual debugging
]
